--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-particles-js": "^3.5.3",
     "react-scripts": "4.0.3",
+    "react-tsparticles": "^1.31.2",
+    "tsparticles": "^1.31.1",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
