--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "antd": "^4.16.6",
+    "aos": "^2.3.4",
     "colcade": "^0.2.0",
     "mauerwerk": "^2.0.2",
     "node-sass": "^6.0.1",
