--- a/firebase.json
+++ b/firebase.json
@@ -1,17 +1,13 @@
 {
   "hosting": {
-    "public": "dist",
-    "site": "devemg-f044d",
+    "source": ".",
     "ignore": [
       "firebase.json",
       "**/.*",
       "**/node_modules/**"
     ],
-    "rewrites": [
-      {
-        "source": "**",
-        "destination": "/index.html"
-      }
-    ]
+    "frameworksBackend": {
+      "region": "us-central1"
+    }
   }
 }
